--- a/src/components/projectshome.astro
+++ b/src/components/projectshome.astro
@@ -11,7 +11,7 @@ import projectsData from "@/data/projects.json";
             <p class="text-white font-semibold my-auto">{project.title}</p>
             <p class="text-slate-400 font-semibold my-auto">
               See project
-              <i class="fa-solid fa-arrow-up-right-from-square" />
+              <i class="fa-solid fa-arrow-up-right-from-square text-base p-1" />
             </p>
           </div>
         </a>
